--- a/_drafts/2015-11-04-SGCC.md
+++ b/_drafts/2015-11-04-SGCC.md
@@ -37,15 +37,17 @@ excerpt: 国网公司的公开资料汇总
 # 负荷情况
 各大区电网/省级电网最高负荷如下：
 
-| 名称       | 最大负荷（万千瓦） | 年份 |
-| --------   | ------------------ | -----|
-| 华北电网   |              19267 | 2015 |
-| 华中电网   |              15050 | 2014 |
-| 西北电网   |               7267 | 2015 |
-| 京津唐电网 |               5203 | 2015 |
-| 广东电网   |               9348 | 2015 |
-| 山东电网   |               6437 | 2015 |
-| 河南电网   |               5016 | 2015 |
-| 上海电网   |               2835 | 2015 |
-| 江苏电网   |               8325 | 2015 |
-| 安徽电网   |               3003 | 2015 |
+| 名称       | 最大负荷（万千瓦） |  年份 |
+| --------   | ------------------ | ----- |
+| 华北电网   |              19267 |  2015 |
+| 华中电网   |              15050 |  2014 |
+| 西北电网   |               7267 |  2015 |
+| 北京电网   |               1817 |  2015 |
+| 天津电网   |               1227 |  2015 |
+| 冀北电网   |               2100 |  2015 |
+| 山东电网   |               6437 |  2015 |
+| 河南电网   |               5016 |  2015 |
+| 上海电网   |               2835 |  2015 |
+| 江苏电网   |               8325 |  2015 |
+| 安徽电网   |               3003 |  2015 |
+| 广东电网   |               9348 |  2015 |
